argocd/internal/open-webui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: ai
spec:
  selector:
    app: open-webui
  ports:
    - name: http
      port: 80
      targetPort: 8080
