argocd/internal/open-webui/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: open-webui-gateway
  namespace: ai
spec:
  selector:
    istio: ingressgateway
    igw-type: internal
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - chat.willyhu.tw
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - chat.willyhu.tw
      tls:
        credentialName: chat-willyhu-tw-tls
        mode: SIMPLE
