argocd/internal/open-webui/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: open-webui-virtualservice
  namespace: ai
spec:
  hosts:
    - chat.willyhu.tw
  gateways:
    - open-webui-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: open-webui
            port:
              number: 80
